--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <a href="" class="brand">Travolic</a>
         <ul class="links">
           <li><a class="active" href="#">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Services</a></li>
+          <li><a href="./about.html">About Us</a></li>
+          <li><a href="./services.html">Services</a></li>
         </ul>
         <input type="button" class="nav_btn" value="Contact Us" />
       </nav>
