completed all pages and fixed navigation issues -_-

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
           <li><a class="active" href="#">About Us</a></li>
           <li><a href="./services.html">Services</a></li>
         </ul>
-        <input type="button" class="nav_btn" value="Contact Us" />
+        <a  class="nav_btn" href="./contact.html"  >Contact Us</a>
       </nav>
 
       <section class="hero_about flex_row space_between">
@@ -201,7 +201,7 @@
     <hr />
     <footer class="copyright">
       <p class="copyright_text">
-        Copyright ® 2021 Sadi Mammadov All rights Reserved
+        Copyright ® 2024 Sadi Mammadov All rights Reserved
       </p>
     </footer>
   </body>
