--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li><a href="./about.html">About Us</a></li>
           <li><a href="./services.html">Services</a></li>
         </ul>
-        <input type="button" class="nav_btn" value="Contact Us" />
+        <a  class="nav_btn" href="./contact.html"  >Contact Us</a>
       </nav>
       <section class="hero_container flex_row">
         <img
@@ -95,7 +95,7 @@
           </div>
         </div>
         <div class="cards flex_row gap_16">
-          <div class="icon  orange">
+          <div class="icon orange">
             <img src="./assets/img/top_card/card_icon_4.svg" alt="" srcset="" />
           </div>
           <div class="flex_column">
@@ -295,9 +295,7 @@
           </p>
           <p>@Lorem</p>
         </div>
-        <div
-          class="footer_container flex_column space_between footer_second"
-        >
+        <div class="footer_container flex_column space_between footer_second">
           <p class="footer_title">About us</p>
           <div class="footer_links flex_column space-between">
             <a href="">Lorem</a>
@@ -319,19 +317,22 @@
         <div
           class="footer_container flex_column justify_content_end gap_24 footer_first"
         >
-          <div class="socail_media_links flex_row space-between ">
-            <a href=""><img src="./assets/img/footer/facebook.svg" class="" alt="" /></a
+          <div class="socail_media_links flex_row space-between">
+            <a href=""
+              ><img src="./assets/img/footer/facebook.svg" class="" alt="" /></a
             ><a href=""><img src="./assets/img/footer/insta.svg" alt="" /></a
             ><a href=""><img src="./assets/img/footer/twitter.svg" alt="" /></a
-            ><a href=""><img src="./assets/img/footer/linkedin.svg" alt="" /></a>
+            ><a href=""
+              ><img src="./assets/img/footer/linkedin.svg" alt=""
+            /></a>
           </div>
         </div>
       </section>
     </main>
-<hr>
+    <hr />
     <footer class="copyright">
       <p class="copyright_text">
-        Copyright ® 2021 Sadi Mammadov All rights Reserved
+        Copyright ® 2024 Sadi Mammadov All rights Reserved
       </p>
     </footer>
   </body>
