--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
           <li><a href="./about.html">About Us</a></li>
           <li><a class="active" href="#">Services</a></li>
         </ul>
-        <input type="button" class="nav_btn" value="Contact Us" />
+        <a  class="nav_btn" href="./contact.html"  >Contact Us</a>
       </nav>
 
       <section class="hero_services flex_column align_items_center">
@@ -292,7 +292,7 @@
     <hr />
     <footer class="copyright">
       <p class="copyright_text">
-        Copyright ® 2021 Sadi Mammadov All rights Reserved
+        Copyright ® 2024 Sadi Mammadov All rights Reserved
       </p>
     </footer>
   </body>
